# VulkanEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  MoonlitEngine.sln  Vulkan Test.sln
DefaultPlugin/: CMakeLists.txt  DefaultPlugin.vcxproj  DefaultPlugin.vcxproj.filters  PluginBehaviourTest.cpp  dllmain.cpp
DefaultPlugin/Headers/: ObjectMeshRenderer.h  ObjectTest.h  PluginBehaviourTest.h
DefaultPlugin/Headers/Behaviours/: MeshRendererBehaviour.h  TestBehaviour.h  TransformBehaviour.h
DefaultPlugin/Source/: ObjectMeshRenderer.cpp  ObjectTest.cpp  PluginBehaviourTest.cpp
DefaultPlugin/Source/Behaviours/: MeshRendererBehaviour.cpp  TestBehaviour.cpp  TransformBehaviour.cpp
DefaultPlugin/Sources/: DefaultPluginExport.h  dllmain.cpp  pch.h
DefaultPlugin/Sources/Behaviours/: MeshRendererBehaviour.cpp  MeshRendererBehaviour.h  TestBehaviour.cpp  TestBehaviour.h  TransformBehaviour.cpp  TransformBehaviour.h
MoonlitEditor/: CMakeLists.txt  MoonlitEditor.vcxproj  MoonlitEditor.vcxproj.filters  SceneViewInputHandler.cpp
MoonlitEditor/Header Files/: MoonlitEditor.h  SceneViewInputHandler.h
MoonlitEditor/Header Files/Editor/: MoonlitEditor.h
MoonlitEditor/Header Files/Editor/Controllers/: SceneViewController.h
MoonlitEditor/Header Files/Editor/ModelClasses/: SceneObjectItem.h
MoonlitEditor/Header Files/Editor/Models/: SceneHierarchyModel.cpp  SceneHierarchyModel.h
MoonlitEditor/Header Files/Editor/Windows/: DefaultDockManager.h  EditorMainWindow.h  EditorWindowBase.h  IDockManager.h
MoonlitEditor/Header Files/Windows/: EditorMainWindow.h  EditorWindowBase.h  SceneViewWindow.h
MoonlitEditor/Source Files/: EditorMain.cpp  MoonlitEditor.cpp  SceneViewInputHandler.cpp
MoonlitEditor/Source Files/Editor/: MoonlitEditor.cpp
MoonlitEditor/Source Files/Editor/Controllers/: SceneViewController.cpp
MoonlitEditor/Source Files/Editor/ModelClasses/: MethodViewModel.cpp  SceneHierarchyModel.cpp  SceneObjectItem.cpp
MoonlitEditor/Source Files/Editor/Windows/: DefaultDockManager.cpp  EditorMainWindow.cpp  EditorWindowBase.cpp
MoonlitEditor/Source Files/Windows/: EditorMainWindow.cpp  EditorWindowBase.cpp  SceneViewWindow.cpp
MoonlitEditor/Sources/: EditorMain.cpp  SceneViewInputHandler.h
MoonlitEditor/Sources/Editor/: EditorPaletter.h  MoonlitEditor.cpp  MoonlitEditor.h  ProjectPaths.cpp  ProjectPaths.h
MoonlitEditor/Sources/Editor/Controllers/: SceneViewController.cpp  SceneViewController.h
MoonlitEditor/Sources/Editor/ModelClasses/: MethodViewModel.cpp  MethodViewModel.h  SceneHierarchyModel.cpp  SceneHierarchyModel.h
MoonlitEditor/Sources/Editor/Utility/: CommandLineParser.cpp  CommandLineParser.h
MoonlitEditor/Sources/Editor/Widgets/: BehaviourCreationWidget.cpp  BehaviourCreationWidget.h  BehaviourWidget.cpp  BehaviourWidget.h  ParameterEditor.h  ParameterEditor.ipp  ParameterEditorBase.cpp  ParameterEditorBase.h  ParameterWidget.cpp  ParameterWidget.h
MoonlitEditor/Sources/Editor/Windows/: DefaultDockManager.cpp  EditorMainWindow.cpp  EditorMainWindow.h
MoonlitEngine/: CMakeLists.txt  GameObject.cpp  MoonlitEngine.cpp  MoonlitEngine.h  MoonlitEngine.vcxproj  MoonlitEngine.vcxproj.filters  ObjectTest.h  ObjectTransform.h  falsemain.cpp  main.cpp
MoonlitEngine/Header Files/: Camera.h  GameObject.h  Mesh.h  MeshRenderer.h  MoonlitEngine.h  MoonlitExport.h  ObjectBehaviour.h  common.h
MoonlitEngine/Header Files/Debug/: Logger.h  Profiler.h
MoonlitEngine/Header Files/Debug/Exceptions/: MoonlitExceptions.h  PluginLoadException.h
MoonlitEngine/Header Files/Engine/: GameObject.h  MoonlitEngine.h
MoonlitEngine/Header Files/Engine/Components/: BehaviourRegistry.h  MeshRenderer.h  ObjectBehaviour.h  ObjectMeshRenderer.h  ObjectTransform.h  (+1 more)
MoonlitEngine/Header Files/Inputs/: InputManager.h  Inputs.h  PlatformInputAbstraction.h  WindowsInputAbstraction.h
MoonlitEngine/Header Files/Interfaces/: ISingleton.h
MoonlitEngine/Header Files/Renderer/: BufferDeviceLink.h  DrawBuffer.h  Material.h  MaterialInstance.h  MeshInstanceManager.h  RenderTarget.h  Renderer.h  RendererContext.h  RendererDeviceManager.h  VulkanData.h  VulkanDeviceManager.h  VulkanEngine.h  VulkanHelperFunctions.h  VulkanPipeline.h
MoonlitEngine/Header Files/ResourceManagement/: FileHelper.h  ImageHelper.h  Mesh.h  MeshBank.h  ResourceBank.h  ResourceManager.h  TextureBank.h  TextureData.h
MoonlitEngine/Resources/Meshes/: Sniper_Final.fbx
MoonlitEngine/Resources/Shaders/: shader.frag  shader.vert  vert.spv
MoonlitEngine/Source Files/: Camera.cpp  Mesh.cpp  MeshRenderer.cpp  MoonlitEngine.cpp  ObjectComponent.cpp  ObjectTest.cpp  ObjectTransform.cpp  falsemain.cpp  main.cpp
MoonlitEngine/Source Files/Debug/: Logger.cpp  Profiler.cpp
MoonlitEngine/Source Files/Engine/: GameObject.cpp  MoonlitEngine.cpp
MoonlitEngine/Source Files/Inputs/: InputManager.cpp  PlatformInputAbstraction.cpp  WindowsInputAbstraction.cpp
MoonlitEngine/Source Files/Renderer/: BufferDeviceLink.cpp  ContextManager.cpp  DrawBuffer.cpp  Material.cpp  MaterialInstance.cpp  MeshInstanceManager.cpp  RenderTarget.cpp  Renderer.cpp  RendererContext.cpp  RendererDeviceManager.cpp  VulkanData.cpp  VulkanDeviceManager.cpp  VulkanEngine.cpp  VulkanPipeline.cpp
MoonlitEngine/Source Files/ResourceManagement/: FileHelper.cpp  ImageHelper.cpp  MeshBank.cpp  ResourceManager.cpp  TextureBank.cpp
MoonlitEngine/Sources/: Camera.cpp  GLMExport.h  MoonlitExport.h  common.h  main.cpp
MoonlitEngine/Sources/Debug/: Logger.cpp  Logger.h  Profiler.cpp  Profiler.h
MoonlitEngine/Sources/Engine/: MoonlitEngine.cpp  MoonlitEngine.h
UnitTests/: CMakeLists.txt
UnitTests/DefaultPluginTests/: TransformBehaviourTests.cpp
UnitTests/MaterialTests/: MaterialTests.cpp
UnitTests/MaterialTests/Shaders/: TestMaterial_NoTextures.slang  TestMaterial_SingleTexture.slang  TestMaterial_ThreeTextures.slang
UnitTests/TaskSystemTests/: TaskSystemTestMain.cpp
UserProject/Resources/: CMakeLists.txt
UserProject/Resources/EditorStyles/: darkstyle.qss
UserProject/Resources/Shaders/: BaseMaterial.slang  vertex.spv  vertex.spv.asm
(+1498 files in other folders)
