FILE(GLOB_RECURSE SOURCE CONFIGURE_DEPENDS
        ${CMAKE_CURRENT_SOURCE_DIR}/Sources/*.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Sources/*.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Sources/*.ipp
)

ADD_LIBRARY(MoonlitEngine SHARED ${SOURCE}
)

SET_TARGET_PROPERTIES(MoonlitEngine PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${RUNTIME_DIR}"
        LIBRARY_OUTPUT_DIRECTORY "${RUNTIME_DIR}"
        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/$<CONFIG>"
)

TARGET_INCLUDE_DIRECTORIES(MoonlitEngine PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/Sources
)

TARGET_LINK_LIBRARIES(MoonlitEngine PRIVATE
        Vulkan::Vulkan
        Qt6::Core
        Qt6::Gui
        Qt6::Widgets
        stb
        assimp
        slang
        xinput
)

TARGET_LINK_LIBRARIES(MoonlitEngine PUBLIC
        glm
)

TARGET_COMPILE_DEFINITIONS(MoonlitEngine PRIVATE ENGINE_DLL_EXPORT)

SET_TARGET_PROPERTIES(MoonlitEngine PROPERTIES DEBUG_POSTFIX "")

