CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(UserProject)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_LIBRARY(MoonlitEngine SHARED IMPORTED)
SET_TARGET_PROPERTIES(MoonlitEngine PROPERTIES
        IMPORTED_LOCATION     "$ENV{MOONLIT_LIBRARY_PATH}/MoonlitEngine.dll"
        IMPORTED_IMPLIB       "$ENV{MOONLIT_LIBRARY_PATH}/MoonlitEngine.lib"
        INTERFACE_INCLUDE_DIRECTORIES "$ENV{MOONLIT_LIBRARY_PATH}/include"
)

# glob user source files
FILE(GLOB_RECURSE USER_SOURCES
        "${CMAKE_CURRENT_SOURCE_DIR}/Sources/*.cpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/Sources/*.h"
)
# user module
ADD_LIBRARY(UserModule SHARED ${USER_SOURCES})

# link against engine
TARGET_LINK_LIBRARIES(UserModule PRIVATE MoonlitEngine)

SET_TARGET_PROPERTIES(UserModule PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Modules"
)